--- a/src/index.html
+++ b/src/index.html
@@ -144,17 +144,17 @@
             <div class="container">
                 <div class="container__prise">
                     <div class="prise">
-                        <h1 class="services__prise">Услуги и цены</h1>
+                        <h1 class="prise__services">Услуги и цены</h1>
                     </div>
                     <div class="tabs">
                         <nav class="tabs__navigation">
                             <ul>
                                 <li class="tabs__active"><a href="#"> Стрижка и укладка</a></li>
-                                <li><a href="#">Косметология</a> </li>
-                                <li><a href="#">Маникюр и педикюр</a></li>
-                                <li><a href="#">Макияж</a></li>
-                                <li><a href="#">Брови и ресницы</a></li>
-                                <li><a href="#">Массаж</a></li>
+                                <li><a class="tab" href="#item2">Косметология</a> </li>
+                                <li><a class="tab" href="#">Маникюр и педикюр</a></li>
+                                <li><a class="tab" href="#">Макияж</a></li>
+                                <li><a class="tab" href="#">Брови и ресницы</a></li>
+                                <li><a class="tab" href="#">Массаж</a></li>
                             </ul>
                         </nav>
                         <div class="tabs__info">
@@ -180,7 +180,7 @@
                                     <p class="block__subtitle">Короткие волосы</p>
                                 </div>
                             </div>
-                            <div class="block__two">
+                            <div id="item2" class="block__two">
                                 <div class="block">
                                     <p class="block__title">Стрижка бороды и усов</p>
                                     <p class="block__money">1200 &#x20bd;</p>
@@ -375,7 +375,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 
-<script src="js/index.js" type="module"></script>
+<script src="js/index.js"></script>
+<script src="js/tabs.js" type="module"></script>
 
 </body>
 </html>
