--- a/src/index.html
+++ b/src/index.html
@@ -337,7 +337,7 @@
                                 <p class="form__title">Быстрая запись</p>
                                 <p class="form__subtitle">Наш менеджер перезвонит в течение нескольких<br> минут, уточнит подробности и согласует время.</p>
                             </div>
-                            <form class="form__action" action="/action_page.php">
+                            <form class="form__action" action="/action_page.php" target="_blank">
                                 <input class="form__name" type="text" name="firstname" placeholder="Ваше имя">
                                 <br>
                                 <input class="form__phone" type="phone" name="phone" placeholder="+7(___)___-__-__">
