--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="hero__container">
                 <div class="hero__content hero">
-                    <div class="header__hero">
+                    <div class="hero__header">
                         <h1 class="hero__title">Создай свой образ <br> вместе с нами</h1>
                         <p class="hero__subtitle">Идеальный образ за 60 минут</p>
                         <button class="btn hero__btn">Записаться онлайн</button>
